# illumia

./: .gitignore  CMakeLists.txt  CMakeLists.txt.last  CMakePresets.json  ConanPresets.json  README.md  conanfile.py
av/: CMakeLists.txt
include/illumia/: config.h  element.h  element.last.h  factory.h  faust.h  gate.h  graphics.h  ivstvideoprocessor.h  link.h  module-instance.h  module.h  paths.h  resource.h  space.h  video-bus-arrangement.h  voice-pool.h  vst-utils.h  vstvideoeffect.h
modules/: CMakeLists.txt  faust.cmake  module.cmake  module.cpp
modules/bloom/: CMakeLists.txt  bloom.cpp  bloom.metal  bloom.mm  metal-types.h
modules/buzz/: CMakeLists.txt  buzz.cpp
modules/deltick/: CMakeLists.txt  deltick.cpp  deltick.dsp
modules/goodwin/: CMakeLists.txt  goodwin.cpp  goodwin.dsp
modules/lfo/: CMakeLists.txt  lfo.cpp  lfo.dsp
modules/royal/: CMakeLists.txt  royal.cpp  royal.dsp
modules/texcube/: CMakeLists.txt  metal-types.h  texcube.cpp  texcube.metal  texcube.mm
modules/tick/: CMakeLists.txt  tick.cpp  tick.dsp
modules/trancegate/: CMakeLists.txt  trancegate.cpp  trancegate.dsp
modules/triangle/: CMakeLists.txt  triangle.cpp  triangle.mm
modules/zaval/: CMakeLists.txt  zaval.cpp
source/: config.cpp  element.cpp  faust.cpp  graphics.mm  paths.cpp  paths.mm  space.cpp  vst-link.cpp  vstvideoeffect.cpp
test/: CMakeLists.txt  element-test.cpp  space-test.cpp  space.cpp
vst/: CMakeLists.txt
vst/include/merc/vst/: ivstvideoprocessor.h  module-instance.h  voice-pool.h  windows-utils.h
vst/source/: faust.cpp  graphics.mm  vstvideoeffect.cpp  windows-utils.cpp
